--- a/CPSC-349-Group-Project-1-main/project1/html/sign-up.html
+++ b/CPSC-349-Group-Project-1-main/project1/html/sign-up.html
@@ -25,7 +25,7 @@
     </nav>
     <form class="form-horizontal">
         <p>Sign Up</p>
-        <img src="" class="rounded-circle" alt="" id = "profileImage"> 
+        <!-- <img src="" class="rounded-circle" alt="" id = "profileImage">  -->
         <!-- <div class="control-group">
             <label class="control-label pictureLabel" for="inputEmail">Add a picture </label><br>
            
@@ -52,7 +52,7 @@
                 <input type="password" id="inputPassword" placeholder="Password" required>
             </div>
         </div>
-        <div class="control-group">
+        <!-- <div class="control-group">
             <label class="control-label" for="inputPassword">Link Your Networks</label>
             <div class="controls">
                 <select class="networks">
@@ -64,7 +64,7 @@
                     <option value="Twitter">Twitter</option>
                 </select>
             </div>
-        </div>
+        </div> -->
         <div class="control-group"> 
             <label class="control-label" for="profilepic">Profile Picture </label>
             <div class="controls">
