--- a/CPSC-349-Group-Project-1-main/project1/html/about.html
+++ b/CPSC-349-Group-Project-1-main/project1/html/about.html
@@ -23,6 +23,7 @@
         </ul>
     </nav>
     <div class="content">
+        <h1>About Us</h1>
         <div class="backgroud-txt">
             <span class="sub-heading">
                 Our mission is simple, we created a page where you could sum up what you're 
@@ -54,6 +55,5 @@
      <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
   <script src="scripts/index.js"></script>
-  <!-- <script src="scripts/result.js"></script> -->
 </body>
 </html>
