--- a/CPSC-349-Group-Project-1-main/project1/html/edit-profile.html
+++ b/CPSC-349-Group-Project-1-main/project1/html/edit-profile.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Get to know me</title>
 </head>
-<body>
+<body id= 'backgroundColor'>
     <nav class="navbar">
         <!-- Brand/logo -->
         <a class="navbar-brand" href="result.html">Get To Know Me</a>
@@ -36,42 +36,46 @@
             <!-- UNCOMMENTED THE CODE BELOW TO SEE THE WHAT IF WE PUT THE LINK FIRST -->
             <div class="networks">
                 <div>GitHub URL</div>
-                <!-- <input type="text" id="github" placeholder="GitHub" value='https://github.com/'> -->
-                <input type="text" id="github" placeholder="GitHub">
+                <input type="text" id="github" placeholder="GitHub" value='https://github.com/'>
+                <!-- <input type="text" id="github" placeholder="https://github.com/"> -->
             </div>
             <div class="networks">
                 <div>Twitter URL</div>
-                <!-- <input type="text" id="twitter" placeholder="Twitter" value = 'https://twitter.com/?lang=en'> -->
-                <input type="text" id="twitter" placeholder="Twitter">
+                <!-- <input type="text" id="twitter" placeholder="Twitter" value = 'https://www.twitter.com/'> -->
+                <input type="text" id="twitter" placeholder="https://www.twitter.com/">
             </div>
             <div class="networks">
                 <div>Facebook URL</div>
                 <!-- <input type="text" id="facebook" placeholder="Facebook" value = 'https://www.facebook.com/'> -->
-                <input type="text" id="facebook" placeholder="Facebook" >
+                <input type="text" id="facebook" placeholder="https://www.facebook.com/" >
             </div>
             <div class="networks">
                 <div>Instagram URL</div>
                 <!-- <input type="text" id="instagram" placeholder="Instagram" value = 'https://www.instagram.com/'> -->
-                <input type="text" id="instagram" placeholder="Instagram" >
+                <input type="text" id="instagram" placeholder="https://www.instagram.com/" >
             </div>
         </div>
         <div class="control-group"> 
             <label class="control-label" id="profilepic" >Profile Picture </label>
             <div class="controls">
-                <input type="file" id="picture-file" name="myfile" ><br><br>
-
+                <input type="file" id="picture-file" name="myfile" required><br><br>
+            </div>
+            <div class="colorGroup">
+                <label for="colorpicker">Choose your background color:</label>
+                <input type="color" class="colorPicker"  value="#FFFFFF">
             </div>
         </div>
+        
         <div class="control-group">
-            <label class="control-label" for="inputText">Edit Bio</label>
+            <label class="control-label" for="inputText" required>Tell Me Something About You</label>
             <div class="controls">
-                <textarea name="" id="inputDescription" cols="60" rows="5"></textarea>
+                <textarea name="" id="inputDescription" cols="60" rows="5" required></textarea>
             </div>
         </div>
         <div class="control-group">
             <div class="controls">
                 <form>
-                    <input class ="Btn" type="submit" onclick="edit_profile()" value="Save Changes"/>
+                    <input class ="Btn" type="submit"  value="Save Changes"/>
                 </form>
             </div>  
         </div>
@@ -94,7 +98,6 @@
     
       <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
     <script src="scripts/index.js"></script>
-    <script src='scripts/user_form.js'></script>
-    <!-- <script src="scripts/result.js"></script> -->
+    <script src='scripts/edit-profile.js'></script>
 </body>
 </html>
