--- a/CPSC-349-Group-Project-1-main/project1/html/login.html
+++ b/CPSC-349-Group-Project-1-main/project1/html/login.html
@@ -44,7 +44,7 @@
         </div>
         <div class="control-group">
             <div class="controls"></div>
-                <input class="Btn" type="submit" onclick="sign_user_in()" id="btn-login" value="Sign In"/><br><br>
+                <input class="Btn" type="submit" onclick="login()" id="btn-login" value="Sign In"/><br><br>
                 <input class="Btn" type="submit" onclick="document.location='sign-up.html'" value="Create Account">
             </div>  
         </div>
@@ -65,7 +65,5 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
     <script src="scripts/index.js"></script>
-    <script src="scripts/user_form.js"></script>
-    <!-- <script src="scripts/result.js"></script> -->
 </body>
 </html>
