--- a/CPSC-349-Group-Project-1-main/project1/html/result.html
+++ b/CPSC-349-Group-Project-1-main/project1/html/result.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/result.css">
     <title>Get To Know Me</title>
 </head>
-<body>
+<body id = 'backgroundColor'>
     <nav class="navbar">
         <!-- Brand/logo -->
         <a class="navbar-brand" href="result.html">Get To Know Me</a>
