--- a/CPSC-349-Group-Project-1-main/project1/html/sign-up.html
+++ b/CPSC-349-Group-Project-1-main/project1/html/sign-up.html
@@ -25,11 +25,11 @@
     </nav>
     <form class="form-horizontal" id = 'signup-form'>
         <p>Sign Up</p> 
-        <!-- <div class="control-group">
-            <label class="control-label pictureLabel" for="inputEmail">Add a picture </label><br>
+        <div class="control-group">
+            <!-- <label class="control-label pictureLabel" for="inputEmail">Add a picture </label><br> -->
            
-            <input type="file" id="myfile" name="myfile" onchange="chooseFile(event)"><br><br>
-        </div> -->
+            <!-- <input type="file" id="myfile" name="myfile" onchange="chooseFile(event)"><br><br> -->
+        </div>
         <!-- <div class="control-group">
             <label class="control-label" for="inputName">Name</label>
             <div class="controls">
